fix: draf release

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -41,6 +41,9 @@
         }
       }
     ],
-    "@semantic-release/github"
+    [
+      "@semantic-release/github",
+      { "draftRelease": true }
+    ]
   ]
 }
