fix: full change log

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -46,7 +46,10 @@
     ],
     [
       "@semantic-release/github",
-      { "draftRelease": true }
+      {
+        "draftRelease": true,
+        "releaseBodyTemplate": "<%= nextRelease.notes %><% if (lastRelease && lastRelease.gitTag) { %>\n\n[Full Changelog](../../compare/<%= lastRelease.gitTag %>...<%= nextRelease.gitTag %>)<% } %>"
+      }
     ]
   ]
 }
