--- a/.releaserc.json
+++ b/.releaserc.json
@@ -19,7 +19,7 @@
     }],
     ["@semantic-release/github", {
       "draftRelease": true,
-      "releaseBodyTemplate": "<%= nextRelease.notes %>"  // keep exactly this
+      "releaseBodyTemplate": "<%= nextRelease.notes %>"
     }]
   ]
 }
