--- a/.releaserc.json
+++ b/.releaserc.json
@@ -44,14 +44,15 @@
     [
       "@semantic-release/exec",
       {
-        "prepareCmd": "git shortlog -sne ${lastRelease.gitTag}..HEAD | sed 's/^.*\\t/- /' > CONTRIBUTORS.txt"
+        "prepareCmd": "git shortlog -sne ${lastRelease.gitTag}..HEAD | sed 's/^.*\\t/- /' > CONTRIBUTORS.txt",
+        "publishCmd": "echo \"${nextRelease.notes}\n\n### 🧑‍🤝‍🧑 Contributors\n$(cat CONTRIBUTORS.txt)\" > RELEASE_BODY.md"
       }
     ],
     [
       "@semantic-release/github",
       {
         "draftRelease": true,
-        "releaseBodyTemplate": "<%= nextRelease.notes %>\n\n### 🧑‍🤝‍🧑 Contributors\n<%= require('fs').existsSync('CONTRIBUTORS.txt') ? require('fs').readFileSync('CONTRIBUTORS.txt', 'utf8') : 'No new contributors.' %>"
+        "releaseBodyFile": "RELEASE_BODY.md"
       }
     ]
   ]
