--- a/.releaserc.json
+++ b/.releaserc.json
@@ -2,56 +2,10 @@
   "branches": ["main"],
   "plugins": [
     [
-      "@semantic-release/commit-analyzer",
-      {
-        "preset": "conventionalcommits",
-        "releaseRules": [
-          { "breaking": true, "release": "major" },
-          { "type": "feat", "release": "minor" },
-          { "type": "fix", "release": "patch" },
-          { "type": "chore", "release": "patch" },
-          { "type": "test", "release": "patch" },
-          { "type": "refactor", "release": "patch" },
-          { "type": "docs", "release": "patch" },
-          { "type": "style", "release": "patch" },
-          { "type": "build", "release": "patch" },
-          { "type": "ci", "release": "patch" }
-        ],
-        "parserOpts": {
-          "noteKeywords": ["BREAKING CHANGE", "BREAKING CHANGES", "BREAKING"]
-        }
-      }
+      "@semantic-release/commit-analyzer"
     ],
     [
-      "@semantic-release/release-notes-generator",
-      {
-        "preset": "conventionalcommits",
-        "writerOpts": {
-          "footerPartial": "\n\n[Full Changelog](https://github.com/owner/repo/compare/{{previousTag}}...{{currentTag}})\n\n{{> contributors}}"
-        },
-        "partials": {
-          "contributors": "\n### Contributors\n{{#each committers}}\n- {{this.name}} ([@{{this.username}}](https://github.com/{{this.username}}))\n{{/each}}\n"
-        },
-        "presetConfig": {
-          "types": [
-            { "type": "feat", "section": "Features" },
-            { "type": "fix", "section": "Bug Fixes" },
-            { "type": "chore", "section": "Chores" },
-            { "type": "test", "section": "Tests" },
-            { "type": "docs", "section": "Documentation" },
-            { "type": "refactor", "section": "Refactoring" },
-            { "type": "style", "section": "Style" },
-            { "type": "build", "section": "Build System" },
-            { "type": "ci", "section": "Continuous Integration" }
-          ]
-        }
-      }
-    ],
-    [
-      "semantic-release-contributors",
-      {
-        "format": "### 👥 Contributors\n{{#each contributors}}\n- {{#if username}}[@{{username}}](https://github.com/{{username}}){{else}}{{name}}{{/if}}\n{{/each}}\n"
-      }
+      "@semantic-release/release-notes-generator"
     ],
     [
       "@semantic-release/github",
