--- a/.releaserc.json
+++ b/.releaserc.json
@@ -27,8 +27,8 @@
       {
         "preset": "conventionalcommits",
         "writerOpts": {
-          "footerPartial": "\\n\\n[Full Changelog](https://github.com/owner/repo/compare/{{previousTag}}...{{currentTag}})",
-          "commitPartial": "* {{#if scope}}**{{scope}}:** {{/if}}{{subject}} (by @{{author}})"
+            "footerPartial": "\\n\\n[Full Changelog](https://github.com/owner/repo/compare/{{previousTag}}...{{currentTag}})",
+            "commitPartial": "* {{#if scope}}**{{scope}}:** {{/if}}{{subject}} (by @{{author.name}})"
         },
         "presetConfig": {
           "types": [
